--- a/arch/arm/configs/eos_fuji_nozomi_defconfig
+++ b/arch/arm/configs/eos_fuji_nozomi_defconfig
@@ -75,6 +75,7 @@ CONFIG_SEMC_CHARGER_USB_ARCH=y
 CONFIG_FUJI_PMIC_KEYPAD=y
 CONFIG_FUJI_GPIO_KEYPAD=y
 CONFIG_PMIC8058_MIC_BIAS=y
+CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_8X60_FUSION_GPIO_GLITCH=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_NO_HZ=y
