--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2274,4 +2274,19 @@ config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"	
 	default n
 
+config NOZOMI_OVERCLOCKABLE_HIGH_STEPPINGS
+	bool "Enable overclocking for the Sony Xperia S (High Steppings)"
+	depends on ARCH_MSM8X60
+	default n
+
+config NOZOMI_OVERCLOCKABLE_LOW_STEPPINGS
+	bool "Enable overclocking for the Sony Xperia S (Low Steppings)"
+	depends on ARCH_MSM8X60
+	default n
+
+config NOZOMI_STOCK_FREQS
+	bool "Use stock freqs for the Sony Xperia S"
+	depends on ARCH_MSM8X60
+	default y
+
 endif
