--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,35 @@
 # command after changing this file, to see if there are
 # any tracked files which get ignored after the change.
 #
+
+# 
+# Special rules
+#
+arch/arm/kernel/vmlinux.lds
+kernel/config_data.h
+kernel/timeconst.h
+lib/crc32table.h
+lib/gen_crc32table
+scripts/basic/fixdep
+scripts/bin2c
+scripts/conmakehash
+scripts/genksyms/genksyms
+scripts/genksyms/keywords.c
+scripts/genksyms/lex.c
+scripts/genksyms/parse.c
+scripts/genksyms/parse.h
+scripts/kallsyms
+scripts/kconfig/conf
+scripts/kconfig/lex.zconf.c
+scripts/kconfig/zconf.hash.c
+scripts/kconfig/zconf.tab.c
+scripts/mod/elfconfig.h
+scripts/mod/mk_elfconfig
+scripts/mod/modpost
+usr/gen_init_cpio
+usr/initramfs_data.cpio
+
+#
 # Normal rules
 #
 .*
