mach-msm: rework overclocking system
add back L2 bandwith boost on overclocking
add additional 1.7 GHZ overclocking frequency
preserve qualcomm's RPM management to save power

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2274,13 +2274,8 @@ config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"	
 	default n
 
-config NOZOMI_OVERCLOCKABLE_HIGH_STEPPING
-	bool "Enable overclocking for the Sony Xperia S (High Steppings)"
-	depends on ARCH_MSM8X60
-	default n
-
-config NOZOMI_OVERCLOCKABLE_LOW_STEPPING
-	bool "Enable overclocking for the Sony Xperia S (Low Steppings)"
+config NOZOMI_OVERCLOCKABLE
+	bool "Enable overclocking for the Sony Xperia S"
 	depends on ARCH_MSM8X60
 	default n
 
