--- a/arch/arm/configs/eos_fuji_nozomi_defconfig
+++ b/arch/arm/configs/eos_fuji_nozomi_defconfig
@@ -524,7 +524,7 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V3=y
-CONFIG_CIFS=y
+CONFIG_CIFS=m
 CONFIG_CIFS_STATS=y
 CONFIG_CIFS_STATS2=y
 CONFIG_CIFS_WEAK_PW_HASH=y
